[package]
    name = "check_downloadable"
    version = "0.1.0"
    edition = "2021"

    [dependencies]
    actix-web = "4"
    tokio = { version = "1", features = ["full"] }
    serde = { version = "1.0", features = ["derive"] }
    serde_json = "1.0"
    dotenv = "0.15"
    reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
    regex = "1.5"
